--- a/finans/index.html
+++ b/finans/index.html
@@ -96,6 +96,24 @@
       </div>
     </section>
     <!-- Fim da seção Home -->
+    <!-- Inicio da seção Saiba -->
+    <section class="caixa">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Saiba para onde vai o seu diheiro</h2>
+              <p>Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vem e para onde vai</p>
+              <a href="" class="btn btn-primary">Veja mais</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="img/saiba.png" alt="saiba.png">
+        </div>
+        </div>
+      </div>
+    </section>
+    <!-- Fim da seção Saiba -->
 
       <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
