--- a/stardewvallew/index.html
+++ b/stardewvallew/index.html
@@ -13,14 +13,115 @@
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
      <!--Meu CSS (estilos custumizados)-->
      <link rel="stylesheet" href="css/style.css">
      <title>Stardew Vallew</title>
     
 </head>
 <body>
-    <header >
+    <header><!--Inicio cabeçalho-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="img/logo.png" alt="logo.png" width="220px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-principal" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-    </header>
+                <div class="collapse navbar-collapse" id="nav-principal">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Home</a>
+                        </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-outline-light ms-4" href="#">Entrar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header><!--Fim cabeçalho-->
+    <section id="home"><!--Inicio do sobre-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex"><!-- Inicio dos textos da seção -->
+                    <div class="align-self-center">
+                        <h1 class="display-4">Stardew Valley</h1>
+                        <p>Stardew Valley é um videogame RPG de simulação desenvolvido por Eric "ConcernedApe" Barone. Os jogadores assumem o papel de um personagem que herda a fazenda dilapidada de seu falecido avô em um lugar conhecido como Stardew Valley.</p>
+                        <form class="mb-4 mt-4">
+                            <div class="input-group input-group-lg">
+                                <input type="text" class="form-control" placeholder="Seu e-mail">
+                                <button type="button" class="btn" id="botao">Cadastra-se</button>
+                            </div>
+                        </form>
+                        <p>Disponível para
+                            <a href="" class="btn btn-outline-light">
+                              <i class="fa-brands fa-android"></i>
+                            </a>
+                            <a href="" class="btn btn-outline-light">
+                              <i class="fa-brands fa-apple fa-lg"></i>
+                            </a>
+                          </p>
+                    </div>
+                </div><!-- Fim dos textos da seção -->
+                <div class="col-md-6 d none d-md-block">
+                    <img src="img/junimos.png" alt="junimos.png">
+                </div>
+            </div>
+        </div>
+    </section><!--Fim do sobre-->
+    <section class="caixa"><!--Inicio da secao saiba-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Saiba mais sobre nós</h2>
+                        <p>Stardew Valley é um RPG sem fim da vida no campo! Você herdou a antiga fazenda de seu avô no Vale do Orvalho. Equipado com ferramentas de segunda mão e algumas moedas, você irá começar sua nova vida. Será que você consegue aprender a viver da terra e transformar esses campos absurdamente vegetados em uma casa próspera? Não vai ser fácil. Desde que Corporação Joja veio à cidade, os antigos modos de vida quase desapareceram. O Centro Comunitário, uma vez o lugar mais visitado da cidade, agora está em ruínas. Mas o vale parece cheio de oportunidades. Com um pouco de dedicação, você pode ser a pessoa que restaurará a grandeza do Vale do Orvalho!<</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img class="img-fluid" src="img/saiba.png" alt="saiba.png">
+                </div>
+            </div>
+        </div>  
+    </section><!--Fim da secao saiba-->
+    <section class="caixa"><!--Inicio da secao criador-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img-fluid" src="img/criador.png" alt="criador.png">
+                </div>
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Eric Barone</h2>
+                        <p>Barone começou a desenvolver Stardew Valley em 2012 e lançou esse jogo em 2016. Foi elogiado por criar o jogo de forma totalmente independente. Ele fez tudo, como criar as personagens, escrever os diálogos, compor a banda sonora e animar cada pixel. Barone atualmente desenvolve o jogo com uma outra pessoa.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!--Fim da secao criador-->
+
+    <!--Primeiro o popper js depois o bootstrap js -->
+      <!--popper js -->
+      <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"></script>
+      <!--Bootstrap js-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"></script>
 </body>
 </html>
