--- a/stardewvallew/index.html
+++ b/stardewvallew/index.html
@@ -58,7 +58,7 @@
                 <div class="col-md-6 d-flex"><!-- Inicio dos textos da seção -->
                     <div class="align-self-center">
                         <h1 class="display-4">Stardew Valley</h1>
-                        <p>Stardew Valley é um videogame RPG de simulação desenvolvido por Eric "ConcernedApe" Barone. Os jogadores assumem o papel de um personagem que herda a fazenda dilapidada de seu falecido avô em um lugar conhecido como Stardew Valley.</p>
+                        <p>Stardew Valley é um videogame RPG de simulação desenvolvido por Eric Barone. Os jogadores assumem o papel de um personagem que herda a fazenda dilapidada de seu falecido avô em um lugar conhecido como Stardew Valley.</p>
                         <form class="mb-4 mt-4">
                             <div class="input-group input-group-lg">
                                 <input type="text" class="form-control" placeholder="Seu e-mail">
@@ -87,7 +87,12 @@
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
                         <h2>Saiba mais sobre nós</h2>
-                        <p>Stardew Valley é um RPG sem fim da vida no campo! Você herdou a antiga fazenda de seu avô no Vale do Orvalho. Equipado com ferramentas de segunda mão e algumas moedas, você irá começar sua nova vida. Será que você consegue aprender a viver da terra e transformar esses campos absurdamente vegetados em uma casa próspera? Não vai ser fácil. Desde que Corporação Joja veio à cidade, os antigos modos de vida quase desapareceram. O Centro Comunitário, uma vez o lugar mais visitado da cidade, agora está em ruínas. Mas o vale parece cheio de oportunidades. Com um pouco de dedicação, você pode ser a pessoa que restaurará a grandeza do Vale do Orvalho!<</p>
+                        <p>Stardew Valley é um RPG sem fim da vida no campo! Você herdou a antiga fazenda de seu avô no Vale do Orvalho. 
+                            Equipado com ferramentas de segunda mão e algumas moedas, você irá começar sua nova vida. 
+                            Será que você consegue aprender a viver da terra e transformar esses campos absurdamente vegetados em uma casa próspera? Não vai ser fácil. 
+                            Desde que Corporação Joja veio à cidade, os antigos modos de vida quase desapareceram. O Centro Comunitário, uma vez o lugar mais visitado da cidade, agora está em ruínas. 
+                            Mas o vale parece cheio de oportunidades. Com um pouco de dedicação, você pode ser a pessoa que restaurará a grandeza do Vale do Orvalho!</p>
+                            <a href="#" class="btn" id="botao2">Veja mais</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -105,7 +110,10 @@
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
                         <h2>Eric Barone</h2>
-                        <p>Barone começou a desenvolver Stardew Valley em 2012 e lançou esse jogo em 2016. Foi elogiado por criar o jogo de forma totalmente independente. Ele fez tudo, como criar as personagens, escrever os diálogos, compor a banda sonora e animar cada pixel. Barone atualmente desenvolve o jogo com uma outra pessoa.</p>
+                        <p>Eric Barone é um desenvolvedor e designer de videojogos, artista, compositor e músico americano. Barone começou a desenvolver Stardew Valley em 2012 e lançou esse jogo em 2016, 
+                            a sua jornada durou 5 longos anos, cheio de desafios, dúvidas e vontade de desistir muitas vezes. Mas depois a glória veio, foi elogiado por criar o jogo de forma totalmente independente. 
+                            Ele fez tudo, como criar as personagens, escrever os diálogos, compor a banda sonora e animar cada pixel.</p>
+                            <a href="#" class="btn" id="botao2">Veja mais</a>
                     </div>
                 </div>
             </div>
