--- a/stardewvallew/index.html
+++ b/stardewvallew/index.html
@@ -81,7 +81,7 @@
             </div>
         </div>
     </section><!--Fim do sobre-->
-    <section class="caixa"><!--Inicio da secao saiba-->
+    <section class="caixa"><!--Inicio da seção saiba-->
         <div class="container">
             <div class="row">
                 <div class="col-md-6 d-flex">
@@ -100,8 +100,8 @@
                 </div>
             </div>
         </div>  
-    </section><!--Fim da secao saiba-->
-    <section class="caixa"><!--Inicio da secao criador-->
+    </section><!--Fim da seção saiba-->
+    <section class="caixa"><!--Inicio da seção criador-->
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -118,7 +118,16 @@
                 </div>
             </div>
         </div>
-    </section><!--Fim da secao criador-->
+    </section><!--Fim da seção criador-->
+    <section class="caixa"><!--Inicio da seção aldeoes-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" src="img/gato.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section><!--Fim da seção aldeoes-->
 
     <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
