--- a/finans-backup/index.html
+++ b/finans-backup/index.html
@@ -132,6 +132,63 @@
       </div>
     </section>
     <!-- Fim da seção Juros -->
+    <section class="caixa"> <!-- Inicio da seção recursos -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/facil.png" alt="facil.png">
+            <h4>Fácil de usar</h4>
+            <p>O Finans vai além do básico e permite que você fça controles incríveis, essenciais para suas finaças. Simples como tem que ser!</p>
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/economize.png" alt="economize.png">
+            <h4>Economize seu tempo</h4>
+            <p>Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa pra você!</p>
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/suporte.png" alt="suporte.png">
+            <h4>Suporte amigo</h4>
+            <p>Dúvidas? Perguntas? Nosso supote super legal ajuda você! A gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!</p>
+          </div>
+        </div>
+      </div>
+    </section><!-- Fim da seção recursos -->
+    <section class="rodape"><!-- Inicio do rodape -->
+      <div class="container">
+        <div class="row">
+        <div class="col-md-6">
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Recursos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Benefícios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Preços</a>
+            </li>
+          </div>
+
+          <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
+              <a href="" class="btn btn-outline-dark">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+              <a href="" class="btn btn-outline-dark">
+                <i class="fa-brands fa-twitter"></i>
+              </a>
+              <a href="" class="btn btn-outline-dark">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="" class="btn btn-outline-dark">
+                <i class="fa-brands fa-youtube"></i>
+              </a>
+          </div>
+        </div>
+      </div>
+    </section><!-- Fim do rodape -->
       <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
     <script
