--- a/stardewvallew/index.html
+++ b/stardewvallew/index.html
@@ -33,16 +33,16 @@
                 <div class="collapse navbar-collapse" id="nav-principal">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Home</a>
+                            <a class="nav-link" href="#">Home</a>
                         </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Aldeões</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Criador</a>
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-outline-light ms-4" href="#">Entrar</a>
@@ -70,7 +70,7 @@
                               <i class="fa-brands fa-android"></i>
                             </a>
                             <a href="" class="btn btn-outline-light">
-                              <i class="fa-brands fa-apple fa-lg"></i>
+                                <i class="fa-brands fa-windows"></i>
                             </a>
                           </p>
                     </div>
@@ -119,15 +119,73 @@
             </div>
         </div>
     </section><!--Fim da seção criador-->
-    <section class="caixa"><!--Inicio da seção aldeoes-->
+    <section class="caixa"><!--Inicio da seção jogar-->
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" src="img/gato.png" alt="">
+                    <img class="img-fluid" src="img/junimos2.png" alt="junimos2.png">
+                    <h4>Gameplay divertida e relaxante</h4>
+                    <p>Stardew Valley traz tudo o que há de melhor no gênero de simulação de fazenda. 
+                        Até mesmo aqueles que não estão acostumados com jogos desse estilo podem ser 
+                        fisgados rapidamente pelo loop de gameplay.Além da tarefa de cuidar da colheita diariamente, 
+                        a gameplay envolve mineração, diálogos com os personagens da vila, quebra-cabeças e até mesmo 
+                        um sistema de combate, já que existem algumas ameaças à espreita.</p>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="img/flor.png" alt="flor.png">
+                    <h4>Tem muito conteúdo e suporta mods</h4>
+                    <p>Stardew Valley é um excelente jogo para passar o tempo graças à sua quantidade de conteúdo, 
+                        que tem recebido cada vez mais novidades a cada atualização. Isso envolve não apenas a tarefa de 
+                        cuidar diariamente da própria fazenda, mas também conhecer NPCs e suas histórias, desvendar mistérios, 
+                        participar de festivais, lutar contra criaturas misteriosas e muito mais.</p>
+                </div>
+                <div class="col-md-4">
+                    <img class="img-fluid" src="img/sementes.png" alt="sementes.png">
+                    <h4>A história de Stardew Valley é grande </h4>
+                    <p>A história de Stardew Valley traz conteúdo o suficiente para entreter o jogador por incontáveis horas.
+                        Além do objetivo principal de chegar ao terceiro ano da fazenda, o jogo traz inúmeros diálogos, eventos 
+                        e até mesmo missões que desenvolvem seu relacionamento com os personagens do jogo.</p>
                 </div>
             </div>
         </div>
-    </section><!--Fim da seção aldeoes-->
+    </section><!--Fim da seção jogar-->
+    <section class="rodape">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <ul class="nav">
+                        <li class="nav-item">
+                          <a class="nav-link link-dark" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link link-dark" href="#">Sobre</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link link-dark" href="#">Aldeões</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link link-dark" href="#">Criador</a>
+                        </li>
+                    </ul>
+                </div>
+                    <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
+                        <a href="" class="btn btn-outline-dark">
+                            <i class="fa-brands fa-facebook"></i>
+                          </a>
+                          <a href="" class="btn btn-outline-dark">
+                            <i class="fa-brands fa-twitter"></i>
+                          </a>
+                          <a href="" class="btn btn-outline-dark">
+                            <i class="fa-brands fa-instagram"></i>
+                          </a>
+                          <a href="" class="btn btn-outline-dark">
+                            <i class="fa-brands fa-youtube"></i>
+                          </a>
+                    </div>
+                
+            </div>
+        </div>
+    </section>
 
     <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
