--- a/finans-backup/index.html
+++ b/finans-backup/index.html
@@ -94,10 +94,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- Fim da seção Home -->
-    <!-- Inicio da seção Saiba -->
-    <section class="caixa">
+    </section><!-- Fim da seção Home -->
+    <section class="caixa"><!-- Inicio da seção Saiba -->
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex">
@@ -112,14 +110,12 @@
         </div>
         </div>
       </div>
-    </section>
-    <!-- Fim da seção Saiba -->
-    <!-- Inicio da seção Juros -->
-    <section class="caixa">
+    </section><!-- Fim da seção Saiba -->
+    <section class="caixa"><!-- Inicio da seção Juros -->
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img src="img/juros.png" alt="juros.png">
+            <img src="img/juros.png" alt="juros.png" class="img-fluid">
           </div>
           <div class="col-md-6 d-flex">
             <div class="align-self-center">
@@ -130,15 +126,14 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- Fim da seção Juros -->
-    <section class="caixa"> <!-- Inicio da seção recursos -->
-      <div class="container">
+    </section><!-- Fim da seção Juros -->
+    <section class="caixa"> <!-- Inicio da seção Recursos -->
+    <div class="container">
         <div class="row">
           <div class="col-md-4">
             <img class="img-fluid" src="img/facil.png" alt="facil.png">
             <h4>Fácil de usar</h4>
-            <p>O Finans vai além do básico e permite que você fça controles incríveis, essenciais para suas finaças. Simples como tem que ser!</p>
+            <p>O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. Simples como tem que ser!</p>
           </div>
           <div class="col-md-4">
             <img class="img-fluid" src="img/economize.png" alt="economize.png">
@@ -152,7 +147,7 @@
           </div>
         </div>
       </div>
-    </section><!-- Fim da seção recursos -->
+    </section><!-- Fim da seção Recursos -->
     <section class="rodape"><!-- Inicio do rodape -->
       <div class="container">
         <div class="row">
@@ -190,6 +185,7 @@
         </div>
       </div>
     </section><!-- Fim do rodape -->
+
       <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
     <script
