--- a/stardewvallew/index.html
+++ b/stardewvallew/index.html
@@ -66,7 +66,7 @@
                             </div>
                         </form>
                         <p>Disponível para
-                            <a href="" class="btn btn-outline-light">
+                            <a href="" class="btn btn-outline-light ms-1">
                               <i class="fa-brands fa-android"></i>
                             </a>
                             <a href="" class="btn btn-outline-light">
