--- a/stardewvallew/index.html
+++ b/stardewvallew/index.html
@@ -75,7 +75,7 @@
                           </p>
                     </div>
                 </div><!-- Fim dos textos da seção -->
-                <div class="col-md-6 d none d-md-block">
+                <div class="col-md-6 d-none d-md-block">
                     <img src="img/junimos.png" alt="junimos.png">
                 </div>
             </div>
@@ -149,43 +149,34 @@
             </div>
         </div>
     </section><!--Fim da seção jogar-->
-    <section class="rodape">
+    <footer class="mt-4 mb-4">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <ul class="nav">
-                        <li class="nav-item">
-                          <a class="nav-link link-dark" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link link-dark" href="#">Sobre</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link link-dark" href="#">Aldeões</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link link-dark" href="#">Criador</a>
-                        </li>
-                    </ul>
+                <div class="col-md-8">
+                    <p>
+                        <a class="link-dark" href="#">Home</a>                   
+                        <a class="link-dark" href="#">Sobre</a>                                            
+                        <a class="link-dark" href="#">Aldeões</a>
+                        <a class="link-dark" href="#">Criador</a>
+                    </p>
                 </div>
-                    <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="" class="btn btn-outline-dark">
-                            <i class="fa-brands fa-facebook"></i>
-                          </a>
-                          <a href="" class="btn btn-outline-dark">
-                            <i class="fa-brands fa-twitter"></i>
-                          </a>
-                          <a href="" class="btn btn-outline-dark">
-                            <i class="fa-brands fa-instagram"></i>
-                          </a>
-                          <a href="" class="btn btn-outline-dark">
-                            <i class="fa-brands fa-youtube"></i>
-                          </a>
-                    </div>
-                
+                <div class="col-md-4 d-flex justify-content-end">
+                    <a href="" class="btn btn-outline-dark ms-2">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="" class="btn btn-outline-dark ms-2">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="" class="btn btn-outline-dark ms-2">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="" class="btn btn-outline-dark ms-2">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </section>
+    </footer>
 
     <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
