--- a/finans/index.html
+++ b/finans/index.html
@@ -12,7 +12,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
       
       <!-- Font awesome -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" 
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
       crossorigin="anonymous" referrerpolicy="no-referrer" />
 
       <!--Meu CSS (estilos custumizados)-->
@@ -94,10 +95,8 @@
           </div>
         </div>
       </div>
-    </section>
-    <!-- Fim da seção Home -->
-    <!-- Inicio da seção Saiba -->
-    <section class="caixa">
+    </section><!-- Fim da seção Home -->
+    <section class="caixa"><!-- Inicio da seção Saiba -->
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex">
@@ -112,8 +111,72 @@
         </div>
         </div>
       </div>
-    </section>
-    <!-- Fim da seção Saiba -->
+    </section><!-- Fim da seção Saiba -->
+    <section class="caixa"><!-- Inicio da seção Juros -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="img/juros.png" alt="juros.png" class="img-fluid">
+          </div>
+          <div class="col-md-6 d-flex">
+            <div class="align-self-center">
+              <h2>Pare de pagar juros e economize</h2>
+              <p>Manter as contas em dia é sempre um problema? O finans avisa você: receba alertas de contas a pagar e a receber!</p>
+              <a class="btn btn-primary" href="">Veja mais</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- Fim da seção Juros -->
+    <section class="caixa"> <!-- Inicio da seção Recursos -->
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/facil.png" alt="facil.png">
+            <h4>Fácil de usar</h4>
+            <p>O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. Simples como tem que ser!</p>
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/economize.png" alt="economize.png">
+            <h4>Economize seu tempo</h4>
+            <p>Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente importa pra você!</p>
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="img/suporte.png" alt="suporte.png">
+            <h4>Suporte amigo</h4>
+            <p>Dúvidas? Perguntas? Nosso supote super legal ajuda você! A gente tá aqui pra resolver seus problemas e deixar sua vida bem mais fácil!</p>
+          </div>
+        </div>
+      </div>
+    </section><!-- Fim da seção Recursos -->
+    <footer class="mt-4 mb-4"><!-- Inicio do rodape -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p>
+              <a href="#">Home</a>
+              <a href="#">Recursos</a>
+              <a href="#">Benefícios</a>
+              <a href="#">Preços</a>    
+            </p>
+          </div>
+          <div class="col-md-4 d-flex justify-content-end">
+            <a href="" class="btn btn-outline-dark ms-2">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ms-2">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ms-2">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="" class="btn btn-outline-dark ms-2">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer><!-- Fim do rodape -->
 
       <!--Primeiro o popper js depois o bootstrap js -->
       <!--popper js -->
